# x-langgraph

./: .env.example  .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  langgraph.json
.trae/documents/: workflow-visualizer-prd.md  (+1 more)
examples/: hello_world.py  langgraph_platform.py
scripts/: __init__.py
server/: .env.example  Dockerfile  pyproject.toml
server/data/workflows/: approval.json  simple_router.json
server/examples/: agent_workflow.py  demo_workflows.py
server/scripts/: init_tables.sql  seed_data.sql
server/src/: __init__.py  main.py
server/src/api/: router.py
server/src/api/routes/: __init__.py  approval.py  chat.py  chats.py  health.py  workflows.py
server/src/constants/: streaming_modes.py
server/src/core/: config.py  logger.py  middleware.py
server/src/infras/: mysql.py
server/src/llms/: providers.py
server/src/models/: workflow.py
server/src/repositories/: workflow_definition_repository.py  workflow_repository.py
server/src/schemas/: __init__.py  chat.py  workflow.py
server/src/services/: __init__.py  chat_service.py  workflow_service.py
server/src/tools/: __init__.py  calculation_tools.py  data_tools.py  database_tools.py  search_tools.py  weather.py
server/src/workflows/: __init__.py  base.py  compiler.py  seed_data.py
server/src/workflows/approval/: __init__.py  nodes.py  state.py  workflow.py
server/src/workflows/customer_service/: __init__.py  nodes.py  state.py  tools.py  workflow.py
server/src/workflows/intent_classifier/: __init__.py  nodes.py  state.py  workflow.py
server/src/workflows/multi_agent/: __init__.py  nodes.py  state.py  workflow.py
server/src/workflows/rag_qa/: __init__.py  nodes.py  state.py  workflow.py
server/src/workflows/simple_router/: __init__.py  nodes.py  state.py  workflow.py
server/tests/: conftest.py  test_api_routes.py  test_workflows.py
src/: main.py
tests/: conftest.py  test_workflows.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+88 files in other folders)
