[project]
name = "x-langgraph"
version = "0.1.0"
description = "A comprehensive LangGraph learning and practice project"
authors = [{ name = "John Young", email = "john.young@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # LangGraph 核心
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=1.0.0",
    "langgraph-checkpoint-mysql>=2.0.0",

    # LangChain
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",

    # 数据验证
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # 日志
    "loguru>=0.7.0",

    # 环境变量
    "python-dotenv>=1.0.0",

    # HTTP 请求
    "requests>=2.28.0",
    "httpx>=0.25.0",

    # 数据库
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",

    # API 服务
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",

    # 向量数据库（可选）
    # "chromadb>=0.4.0",
    # "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.uv]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
]
markers = [
    "asyncio: mark test as async",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
